gobmkida/c1/play_aftermath
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/play_aftermath/src/engine/aftermath.c:1399:6: error: use of undeclared identifier 'play_aftermath_current_color'
if ( play_aftermath_current_color != color ) 
     ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/play_aftermath/src/engine/aftermath.c:1401:1: error: use of undeclared identifier 'play_aftermath_current_color'
play_aftermath_current_color = color; 
^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/play_aftermath/src/engine/aftermath.c:1408:21: error: use of undeclared identifier 'play_aftermath_current_color'
if ( v4 != 3 && *( &play_aftermath_current_color + v3) != v4 ) 
                    ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/play_aftermath/src/engine/aftermath.c:1410:5: error: use of undeclared identifier 'play_aftermath_current_color'
*( &play_aftermath_current_color + v3) = v4; 
    ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/play_aftermath/src/engine/aftermath.c:1420:12: error: expected expression
*( _OWORD *)&aftermath.white_prisoners = 0LL; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/play_aftermath/src/engine/aftermath.c:1420:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&aftermath.white_prisoners = 0LL; 
   ^
6 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/play_aftermath/src/obj/1/aftermath.o] Error 1
